--- a/Week0v2/Week0v2.vcxproj
+++ b/Week0v2/Week0v2.vcxproj
@@ -143,7 +143,16 @@
       <AdditionalDependencies>DirectXTK.lib;libfbxsdk.lib;lua.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(ProjectDir)Engine\Source\ThirdParty\Lua\$(Configuration)\dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "$(ProjectDir)Engine\Source\ThirdParty\Lua\$(Configuration)\dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)Engine\Source\ThirdParty\FBX_SDK\2020.3.7\lib\$(Platform)\$(Configuration)\libfbxsdk.dll" "$(OutDir)"
+robocopy "$(ProjectDir)Assets" "$(OutDir)\Assets" *.* /E /NFL /NDL
+robocopy "$(ProjectDir)Contents" "$(OutDir)\Contents" *.* /E /R:3 /W:5 /NFL /NDL
+robocopy "$(ProjectDir)Font"     "$(OutDir)\Font"     *.* /E /R:3 /W:5 /NFL /NDL
+robocopy "$(ProjectDir)Shaders"  "$(OutDir)\Shaders"  *.* /E /R:3 /W:5 /NFL /NDL
+robocopy "$(ProjectDir)Icon"     "$(OutDir)\Icon"     *.* /E /R:3 /W:5 /NFL /NDL
+xcopy /y /d "$(ProjectDir)editor.ini" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)imgui.ini" "$(OutDir)"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -171,7 +180,16 @@
       <ShaderModel>5.0</ShaderModel>
     </FxCompile>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(ProjectDir)Engine\Source\ThirdParty\Lua\$(Configuration)\dll" "$(OutDir)"</Command>
+      <Command>xcopy /y /d "$(ProjectDir)Engine\Source\ThirdParty\Lua\$(Configuration)\dll" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)Engine\Source\ThirdParty\FBX_SDK\2020.3.7\lib\$(Platform)\$(Configuration)\libfbxsdk.dll" "$(OutDir)"
+robocopy "$(ProjectDir)Assets" "$(OutDir)\Assets" *.* /E /NFL /NDL
+robocopy "$(ProjectDir)Contents" "$(OutDir)\Contents" *.* /E /R:3 /W:5 /NFL /NDL
+robocopy "$(ProjectDir)Font"     "$(OutDir)\Font"     *.* /E /R:3 /W:5 /NFL /NDL
+robocopy "$(ProjectDir)Shaders"  "$(OutDir)\Shaders"  *.* /E /R:3 /W:5 /NFL /NDL
+robocopy "$(ProjectDir)Icon"     "$(OutDir)\Icon"     *.* /E /R:3 /W:5 /NFL /NDL
+xcopy /y /d "$(ProjectDir)editor.ini" "$(OutDir)"
+xcopy /y /d "$(ProjectDir)imgui.ini" "$(OutDir)"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
